# predict_measles_genotype

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml
src/predict_genotype/: __init__.py  predict.py
src/predict_genotype/reference_data/: measles_N450_genotype_table_who.csv  measles_N450_genotypes.fasta
tests/: README.md  test_analysis.py  test_utils.py
tests/data/: test_R1.fastq
